<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        >

        <EditText
            android:id="@+id/et_vacancy_text_search"
            android:hint="@string/vacancy_text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/et_vacancy_region_search"
            android:hint="@string/vacancy_region_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:text="@string/find_vacancies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff404040"
            android:textColor="@android:color/white"
            android:onClick="findVacancies"/>
    </LinearLayout>

</LinearLayout>