<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/content_error"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/service_is_unvailable"/>

        <TextView
            android:id="@+id/tv_fail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/fail_load_vacancies"
            android:layout_below="@id/tv_error"/>

        <Button
            android:id="@+id/btn_service_fail"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15dp"
            android:text="@string/button_repeat"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fail"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/vacancies_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <ListView
            android:id="@+id/lv_vacancies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</LinearLayout>

